--- a/src/styles/components/_intro.scss
+++ b/src/styles/components/_intro.scss
@@ -12,7 +12,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #080808;
+  // background: #080808;
   animation: slide-out-container 2.7s cubic-bezier(0.97, 0.01, 0.36, 0.99) 3.4s;
   animation-fill-mode: forwards;
   // mix-blend-mode: difference;
