--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,8 @@
 
 @font-face {
   font-family: "Hanson";
-  src: url("../fonts/Hanson-Bold.otf") format("opentype");
+  src: url("../fonts/hanson-bold-webfont.woff2") format("woff2"),
+    url("../fonts/hanson-bold-webfont.woff") format("woff");
 }
 
 @import "components/intro";
