--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,4 +1,5 @@
 @import "../helpers/variables";
+@import "../breakpoints/breakpoints";
 
 .navbar {
   background-color: transparent;
@@ -10,7 +11,9 @@
   margin: 0 auto;
   padding: 20px 1% 0 1%;
   justify-content: space-between;
-  // mix-blend-mode: exclusion;
+  @include media("<=phone") {
+    mix-blend-mode: difference;
+  }
 }
 .navbar-index {
   @extend .navbar;
@@ -27,9 +30,9 @@
   margin-top: -0.3rem;
   fill: $ice-white;
   transform: scale(2.2);
-  transition: 0.2s;
+  transition: transform 0.3s ease;
   &:hover {
-    transform: scale(2.45);
+    transform: scale(2.8);
   }
 }
 #navbar-title {
@@ -79,7 +82,7 @@
 #linked-in {
   // width: 100%;
   height: 100%;
-  transition: all 0.3s 0s ease;
+  transition: transform 0.3s ease;
   transform-origin: center;
   transform: scale(1.5);
   &:hover {
