--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -73,10 +73,9 @@
   display: inline-flex;
   justify-content: space-evenly;
   align-items: center;
-  // padding-right: 2.5%;
+  padding-right: 1%;
 }
 .social-link {
-  // width: fit-content;
   height: 100%;
 }
 #linked-in {
@@ -89,3 +88,11 @@
     transform: scale(1.7);
   }
 }
+.github-wrapper {
+  // height: 100%;
+  transition: transform 0.3s ease;
+  &:hover {
+    transform: scale(1.2);
+  }
+}
+
