changed border-radius on social links

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -79,7 +79,7 @@
   width: 14.5%;
   opacity: 0.9;
   border: 1px solid transparent;
-  border-radius: 50%;
+  border-radius: 6px;
   overflow: hidden;
   transition-property: transform, opacity;
   transition-duration: 0.3s;
